--- a/my-csss.css
+++ b/my-csss.css
@@ -1,3 +1,22 @@
 body{
-    background-image: url(logo.png);
+    font-family: 'Poppins', sans-serif;
+}
+.welcome{
+    font-size: 50px;
+    text-align: left;
+    width: 50%;
+    color: #212034;
+}
+.top-part{
+    display: flex;
+    padding-left: 150px;
+    padding-right: 20px;
+    background-image: url(images/BG-2.png);
+}
+.top-part img{
+    width: 80%;
+}
+.separation{
+    color: red;
+    font-size: 100px;
 }
