--- a/my-csss.css
+++ b/my-csss.css
@@ -1,7 +1,11 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+section{
+    max-width: 100%;
+}
 .welcome{
+    box-sizing: border-box;
     font-size: 40px;
     text-align: left;
     width: 50%;
@@ -13,12 +17,12 @@ body{
     padding-right: 20px;
     background-image: url(images/bg.png);
     background-repeat: no-repeat;
-    margin: -10px;
+    margin: -8px;
     
     
 }
 .top-part img{
-    width: 100%;
+    max-width: 100%;
 }
 .separation{
     color: rgb(253, 70, 49);
@@ -37,11 +41,10 @@ body{
 }
 
 .container{
-    position: fixed;left: 50px;top: 20px;
+    position: absolute;left: 50px;top: 20px;
     display: inline-block;
     cursor: pointer;
-    
-  }
+}
   
   .bar1, .bar2, .bar3 {
     width: 35px;
@@ -51,17 +54,31 @@ body{
 
   }
 .middle-part{
-    display: flex;
+    
     background-image: url(images/bg1.png);
     background-repeat: no-repeat;
-    margin-top: -20px;
+    
 }
 .gallery{
-    width: 50%;
-    padding-left: 40px;
-    padding-right: 40px;
+    display: flex;
+    max-width: 100%;
+    padding-inline-start: 200px;
+    scroll-padding-inline-end: 200px;
+
+
 }
 .gallery img{
-    width: 50%;
-    
+    width: 80%;
+    box-sizing: border-box;
+    box-shadow: 0 4px 5px #212034;
+
+}
+#mywork{
+    text-align: center;
+    font-size: 50px;
+    border: solid 2px #fd4631;
+    padding-left: 10px;padding-right: 10px;
+    border-radius: 15px;
+    box-shadow: 0 3px 5px #212034;
+    color: #212034;
 }
